2006-04-05  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: Make "application/postscript",
	a subclass of "text/plain". Thanks to Sebastian Heutling,
	Tristan Wibberley and Sebastien Bacher.

	Add missing sub-classing information to a few dozen other
	MIME types, including "application/rtf", "application/pdf",
	ODF and OOo MIME types.

	* Makefile.am:
	* test-subclassing.c:
	Add simple XML parser that checks for presence of "sub-class-of"
	nodes in freedesktop.org.xml and outputs MIME types that don't
	provide the flag.

2006-03-18  Miloslav Trmac  <mitr@volny.cz>

	* configure.in: Add "lt" (Lithuanian) to ALL_LINGUAS.

2006-03-15  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add a mime-type for WMA (Closes: #2178),
	and make it and WMV sub-classes of ASF (Closes: #2051), patches from
	Stanislav Brabec <sbrabec@suse.cz>

2006-03-15  Bastien Nocera  <hadess@hadess.net>

	* configure.in: also install the Danish translation, patch from 
	Stanislav Brabec <sbrabec@suse.cz> (Closes: #2051)

2006-03-15  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add *.qtl glob for Quicktime Links files
	(from http://developer.apple.com/documentation/QuickTime/QT6WhatsNew/Chap1/chapter_1_section_53.html)

=== shared-mime-info 0.17 ===
2006-03-14  Bastien Nocera  <hadess@hadess.net>

	* .cvsignore: upd
	* configure.in: 0.17
	* NEWS: upd

2006-03-13  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add Quicktime Media Link magic to
	video/quicktime

2006-03-13  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add "application/x-srt" for .srt subtitle
	files, and make them a subclass of text/plain

2006-03-09  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: make "x-directory/normal" an alias for
	"inode/directory".

2006-03-09  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: make "application/x-cue" a subclass of