@@ -2568,8 +2568,9 @@ command to generate the output files.
     <_comment>rich text document</_comment>
     <glob pattern="*.rtx"/>
   </mime-type>
-  <mime-type type="text/rss">
-    <sub-class-of type="text/plain"/>
+  <mime-type type="application/rss+xml">
+    <alias type="text/rss"/>
+    <sub-class-of type="application/xml"/>
     <_comment>RSS summary</_comment>
     <acronym>RSS</acronym>
     <expanded-acronym>RDF Site Summary</expanded-acronym>
